tests/NormalTests/paczka1/fuzzy1/53709174.err
Error in line 7: knVlF A205 65,1
Error in line 9: knVlF A736 40,7
Error in line 3: NRjq A205 59,7
Error in line 14: knVlF A30 11,3
Error in line 20: knVlF A854 76,7
Error in line 25: 6DwA3i A854 26,2
Error in line 34: 6DwA3i A3$ 96,$
